--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <h1>
         Odin Recipes
     </h1>
-    
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <p>Home/</p>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    </ul>
 </body>
 </html>
