--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>
@@ -12,10 +12,8 @@
     <p>Home/</p>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/linguine.html">Linguine</a></li>
+        <li><a href="recipes/gnocchi.html">Gnocchi</a></li>
     </ul>
 </body>
 </html>
