--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -38,7 +38,7 @@
             <li>Let the lasagna rest before serving.</li>
         </ol>
 
-    <!-- Next step is Interactio 3 on The Odin Project Page-->
+    <!-- Next step is Interaction 4 on The Odin Project Page-->
     
 </body>
 </html>
